# fbool

./: .cz.toml  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
clique_solver/: Cargo.toml
docs/: guide.md  index.md
docs/development/: index.md  publishing.md
docs/learn/: definitions.md  index.md  mental-model.md  metrics.md
docs/stylesheets/: extra.css
docs/tools/: cli.md  experiments.md
experiments/: ANALYSIS_GUIDE.md  README.md  cli.py
experiments/commands/: __init__.py  train.py
experiments/results/: bayes_optimal_core_metrics.csv  bayes_optimal_multiclass.csv  bayes_optimal_t5.csv  bayes_optimal_t9.csv  mi_t9.csv  mutual_info_multiclass.csv  npn_table.parquet  orthogonality_binary_t9.csv  orthogonality_multiclass.csv  orthogonality_t9.csv  orthogonality_verify.csv  pytorch_mlp_smc2026_full.csv
experiments/scripts/: README.md  full_pipeline.sh  quick_analysis.sh  smoke_test.sh
fbool/: Cargo.toml  build.rs
fbool-cli/: Cargo.toml
fbool-cli/src/: main.rs
fbool-cli/src/cli/: args.rs  commands.rs  mod.rs
fbool-cli/src/functions/: mod.rs
fbool-cli/src/handlers/: debug.rs  encode.rs  entanglement.rs  entropy.rs  equanimity_importance.rs  mod.rs  subinfo.rs
fbool-cli/src/traits/: complete.rs  encodeable.rs  mod.rs
fbool-cli/src/utils/: mod.rs  output.rs  timing.rs
fbool-cli/tests/: cli_tests.rs
fbool-experiments/: Cargo.toml
fbool-experiments/src/: bayes_optimal.rs  compute_metrics.rs  metrics.rs  npn_create.rs  orthogonality.rs
fbool-py/: Cargo.toml  README.md  fbool.pyi  pyproject.toml
fbool-py/src/: lib.rs
fbool-py/tests/: test_fbool.py  test_influence.py  test_majority.py  test_npn.py  test_parity.py  test_spectral.py
fbool/cpp/: flat_hash_map.cpp  lib.cpp  optimal5.cpp  paths.cpp
fbool/src/: auxiliar.rs  clique_solver.rs  examples.rs  fmulti.rs  fvalue.rs  lib.rs  macros.rs  optimal5.rs
fbool/src/metrics/: certificate.rs  entanglement.rs  fragmentation.rs  frontier.rs  influence.rs  mod.rs  sensitivity.rs  spectral.rs  structure.rs
optimal5/: Cargo.toml  LICENSE-THIRD-PARTY  build.rs
optimal5/cpp/: lib.cpp  optimal5.cpp
optimal5/src/: lib.rs
