[package]
name = "clique_solver"
version.workspace = true
edition = "2021"
description = "Solver for the NP-complete CLIQUE problem on graphs using boolean vector adjacency encoding"
license = "MIT"
repository = "https://github.com/edugzlez/fbool"
homepage = "https://github.com/edugzlez/fbool"
readme = "../README.md"
keywords = ["clique", "graph", "boolean", "combinatorics", "np-complete"]
categories = ["algorithms", "mathematics"]
authors = [
    "Eduardo González-Vaquero <edugonzalezvaq@gmail.com>",
    "Ricardo Maurizio Paul <memaurifu14@gmail.com>",
]

[lib]
name = "clique_solver"
path = "src/lib.rs"

[dependencies]
itertools = "0.10.5"
rand = "0.8.5"
