[package]
name = "fbool-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fbool"
path = "src/main.rs"



[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
fbool = { path = "../fbool" }
optimal5 = { version = "0.1.0", path = "../optimal5" }
tqdm.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
