[package]
name = "fbool-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "fbool-cli"
path = "src/main.rs"


[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
fbool = { path = "../fbool", features = ["optimal5"] }
tqdm.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
