[package]
name = "fbool-experiments"
version.workspace = true
edition = "2024"

[[bin]]
name = "npn-create"
path = "src/npn_create.rs"


[[bin]]
name = "compute-metrics"
path = "src/compute_metrics.rs"

[[bin]]
name = "bayes-optimal"
path = "src/bayes_optimal.rs"

[[bin]]
name = "orthogonality"
path = "src/orthogonality.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
comfy-table = "7.2.1"
fbool = { path = "../fbool", features = ["optimal5"] }
indicatif = { version = "0.18.4", features = ["rayon"] }
polars = { version = "0.53.0", features = ["parquet", "lazy"] }
parquet = "58.1.0"
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
