[package]
name = "fbool-py"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "fbool"


[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py311"] }
fbool = { path = "../fbool" }
numpy = "0.28.0"
bincode = "2.0.1"
optimal5 = { version = "0.1.0", path = "../optimal5" }
petgraph = "0.8.2"
