[package]
name = "fbool-py"
version.workspace = true
edition = "2021"
description = "Python bindings for fbool: Boolean function analysis from Rust"
license = "MIT"
repository = "https://github.com/edugzlez/fbool"
homepage = "https://github.com/edugzlez/fbool"
documentation = "https://edugzlez.github.io/fbool/"
readme = "README.md"
authors = [
    "Eduardo Gonzalez-Vaquero <edugon07@ucm.es>",
    "Ricardo Maurizio Paul <rpaul01@ucm.es>",
]

[lib]
crate-type = ["cdylib"]
name = "fbool"


[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py311"] }
fbool = { path = "../fbool", features = ["clique", "optimal5"] }
numpy = "0.24.0"
bincode = "2.0.1"
petgraph = "0.8.2"
