[project]
name = "fbool_py"
version = "0.1.0"
dependencies = [
    "numpy>=2.2.5",
]
requires-python = ">=3.11"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "matplotlib-stubs>=0.3.4",
    "maturin>=1.9.6",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
]
