[project]
name = "fbool"
version = "0.1.0"
description = "Python bindings for fbool: Boolean function analysis with entanglement, entropy, sensitivity and circuit complexity"
readme = "../README.md"
license = { text = "MIT" }
authors = [
    { name = "Eduardo González-Vaquero", email = "edugonzalezvaq@gmail.com" },
    { name = "Ricardo Maurizio Paul", email = "memaurifu14@gmail.com" },
]
keywords = ["boolean", "entanglement", "information-theory", "circuit-complexity", "logic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=2.2.5",
]
requires-python = ">=3.11"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "matplotlib-stubs>=0.3.4",
    "maturin>=1.9.6",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
]
