[package]
name = "fbool"
version = "0.1.0"
edition = "2021"

[features]
default = ["entanglement", "frontier", "fmatrix"]
entanglement = []
frontier = ["dep:petgraph"]
fmatrix = []

[dependencies]
primality.workspace = true
# Using rand 0.8 stable instead of 0.9 beta
rand = "0.8"
tokio.workspace = true
futures.workspace = true
itertools.workspace = true
kdam.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
nalgebra.workspace = true
bincode.workspace = true
clique_solver = { path = "../clique_solver" }
fwht.workspace = true
rayon.workspace = true
petgraph = { workspace = true, optional = true }
