[package]
name = "fbool"
version = "0.1.0"
edition = "2021"
description = "Boolean function analysis library: entanglement, entropy, sensitivity, spectral analysis, frontier, and circuit complexity"
license = "MIT"
repository = "https://github.com/edugzlez/fbool"
homepage = "https://github.com/edugzlez/fbool"
documentation = "https://docs.rs/fbool"
readme = "../README.md"
keywords = ["boolean", "entanglement", "information-theory", "circuit-complexity", "spectral"]
categories = ["algorithms", "mathematics", "science"]
authors = ["Eduardo González-Vaquero <edugonzalezvaq@gmail.com>", "Ricardo Maurizio Paul <memaurifu14@gmail.com>"]

[features]
default = ["entanglement", "frontier", "fmatrix", "clique"]
entanglement = []
frontier = ["dep:petgraph"]
fmatrix = []
clique = []

[dependencies]
primality.workspace = true
# Using rand 0.8 stable instead of 0.9 beta
rand = "0.10"
tokio.workspace = true
futures.workspace = true
itertools.workspace = true
kdam.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
nalgebra.workspace = true
bincode.workspace = true
fwht.workspace = true
rayon.workspace = true
petgraph = { workspace = true, optional = true }
