[package]
name = "optimal5"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper around Adam P. Goucher's optimal5 C++ engine (https://gitlab.com/apgoucher/optimal5). Computes the minimum number of logic gates to implement any Boolean function of up to 5 variables."
license = "MIT"
repository = "https://github.com/edugzlez/fbool"
homepage = "https://github.com/edugzlez/fbool"
readme = "../README.md"
keywords = ["boolean", "circuit", "gates", "optimization", "logic"]
categories = ["algorithms", "mathematics", "science"]
authors = ["Eduardo González-Vaquero <edugonzalezvaq@gmail.com>", "Ricardo Maurizio Paul <memaurifu14@gmail.com>"]

[lib]
name = "optimal5"
path = "src/lib.rs"

[dependencies]
fbool = { version = "0.1.0", path = "../fbool" }

[build-dependencies]
cc = "1.0"
